// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    anything
  </Text>
</TouchableOpacity>
`;

exports[`CommunityRow hides badge when no newPostCount 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "foo.png",
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Foom
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`CommunityRow highlights when matching currentCommunityId 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "foo.png",
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Foom
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`CommunityRow matches the last snapshot 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "foo.png",
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Foom
    </Text>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        7
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`DrawerMenu matches the last snapshot 1`] = `
<View>
  <SectionList
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onEndReachedThreshold={2}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "data": Array [
            Object {
              "id": 1,
              "name": "Network",
            },
          ],
          "keyExtractor": [Function],
          "label": "Networked Communities",
          "renderItem": [Function],
        },
        Object {
          "data": Array [
            Object {
              "id": 2,
              "name": "Community",
            },
          ],
          "keyExtractor": [Function],
          "label": "Independent Communities",
          "renderItem": [Function],
        },
      ]
    }
    stickySectionHeadersEnabled={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
  <Button
    onPress={undefined}
    text="Create a Community"
  />
  <View>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Image
        source={
          Object {
            "uri": "http://anyurl",
          }
        }
      />
    </TouchableOpacity>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
      >
        Hello, 
        Roy Rogers
        !
      </Text>
      <View>
        <TextButton
          onPress={[Function]}
          text="Settings"
        />
      </View>
    </View>
  </View>
  <Connect(SocketListener) />
</View>
`;

exports[`NetworkRow matches the last snapshot 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "network.png",
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Network Name
    </Text>
    <Icon
      allowFontScaling={false}
      name="chevron-down"
      onPress={[Function]}
      size={12}
    />
  </TouchableOpacity>
  <View>
    <CommunityRow
      community={
        Object {
          "avatarUrl": "foo.png",
          "id": 1,
          "name": "Foom",
          "newPostCount": 1,
        }
      }
      currentCommunityId={1}
      goToCommunity={[Function]}
    />
  </View>
</View>
`;

exports[`NetworkRow shows all communities link 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/All_Communities2.png",
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      All Communities
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`SectionHeader matches the last snapshot 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    NETWORKED COMMUNITIES
  </Text>
</View>
`;
